@@ -31,7 +31,7 @@
 #else
 #define	USED
 #endif
-static const char id[] USED = "@(#)sh.sl	1.9 (gritter) 6/15/05";
+static const char id[] USED = "@(#)sh.sl	1.10 (gritter) 6/15/05";
 /* SLIST */
 /*
 args.c: * Sccsid @(#)args.c	1.4 (gritter) 6/15/05
@@ -55,7 +55,7 @@ hash.h: * Sccsid @(#)hash.h	1.4 (gritter) 6/15/05
 hashserv.c: * Sccsid @(#)hashserv.c	1.4 (gritter) 6/15/05
 io.c: * Sccsid @(#)io.c	1.5 (gritter) 6/15/05
 jobs.c: * Sccsid @(#)jobs.c	1.7 (gritter) 6/15/05
-mac.h: * Sccsid @(#)mac.h	1.4 (gritter) 6/15/05
+mac.h: * Sccsid @(#)mac.h	1.5 (gritter) 6/15/05
 macro.c: * Sccsid @(#)macro.c	1.6 (gritter) 6/15/05
 main.c: * Sccsid @(#)main.c	1.5 (gritter) 6/15/05
 mode.h: * Sccsid @(#)mode.h	1.4 (gritter) 6/15/05
